<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">QuicklyShop</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="text_button_editProfile">Editar Perfil</string>
    <string name="text_button_realizarCompra">Realizar Compra</string>
    <string name="text_button_agregarProducto">Agregar otro</string>
    <string name="text_button_eliminarProducto">Eliminar</string>
    <string name="text_button_eliminarProductos">Eliminar todos</string>
    <string name="text_button_realizarPago">Realizar pago</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_lastname">Apellido</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">Únete</string>
    <string name="text_button_actualizar">Actualizar</string>
    <string name="do_payment" tools:ignore="MissingTranslation">Confirmar y enviar pedido</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="toolbar_tittle_payment">Hacer Pago</string>
    <string name="toolbar_tittle_factura">Factura</string>
    <string name="toolbar_tittle_editProfile">Editar Perfil</string>
    <string name="username_card">Uriel Ramírez</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">10 Me Gusta</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Aliados</string>
    <string name="tab_profile">Yo</string>
    <string name="card_number">Número de Tarjeta</string>
    <string name="card_name">Nombre Tarjeta</string>
    <string name="card_date">mm/aaaa</string>
    <string name="card_owner">Documento Titular</string>
    <string name="owner_address">Dirección Titular</string>
    <string name="owner_phone">Celular Titular</string>
    <string name="owner_cvv">CVV</string>
    <string name="taxes_payment_number">Numero de Cuotas</string>
    <string-array name="number_payments_taxes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="secondword_detail">Me Gusta</string>
    <string name="titleimagedetail" tools:ignore="MissingTranslation">\"Todo copas en la playa\"</string>
    <string name="lorem" tools:ignore="MissingTranslation">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="transitionname_picture" tools:ignore="MissingTranslation">transitionnamepicture</string>
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="scan_result">Scancode</string>
    <string name="usentakeother_scanner">Usar y tomar otro</string>
    <string name="gotocheckout_scanner">Ir a carrito</string>
    <string name="scanner_error">Ocurrio un error al escanear</string>
    <string name="product_added">Producto agregado</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_address">Direccion</string>
    <string name="dontuse_scanner">Usar otro</string>
    <string name="title_activity_checkout">Factura</string>
    <string name="product_card">Producto</string>
</resources>
