<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingEnd="16dp"
    android:paddingStart="16dp"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="5"
        android:textColor="#ff333333"
        android:textSize="15sp"
        tools:text="Scan result"/>

    <TextView
        android:id="@+id/format"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="2"
        android:textColor="#ff777777"
        android:textSize="15sp"
        tools:text="Code format"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:orientation="vertical">

        <Button
            android:id="@+id/dontuse_scanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/dontuse_scanner"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/usenselectother_scanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/usentakeother_scanner"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/gotocheckout_scanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/gotocheckout_scanner"
            tools:ignore="ButtonStyle"/>
    </LinearLayout>
</LinearLayout>