<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cosw.quicklyshop.view.fragment.SearchFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="93dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:src="@drawable/payment_icon" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="275dp"
                android:layout_height="43dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="17dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="12dp"
                android:layout_toEndOf="@+id/imageView"
                android:layout_toRightOf="@+id/imageView"
                android:text="Hacer Pago"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="bold"
                app:fontFamily="sans-serif" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="64dp"
                    android:layout_height="54dp"
                    android:src="@drawable/payment_method_2" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="64dp"
                    android:layout_height="54dp"
                    android:src="@drawable/payment_method_1" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="64dp"
                    android:layout_height="54dp"
                    android:src="@drawable/payment_method_4" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="64dp"
                    android:layout_height="54dp"
                    android:src="@drawable/payment_method_3" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="64dp"
                    android:layout_height="54dp"
                    android:src="@drawable/payment_method_5" />
            </TableRow>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/card_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_number" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/card_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_name" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/card_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_date" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/card_owner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_owner" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/owner_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/owner_address" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/owner_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/owner_phone" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/cvv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/owner_cvv" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/edittext_margin_createaccount"
                    android:theme="@style/EditTextBlack">

                    <Spinner
                        android:id="@+id/spinner1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/number_payments_taxes"
                        android:minWidth="100dp"
                        android:prompt="@string/taxes_payment_number" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/joinUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/do_payment"
                    android:theme="@style/RaisedButtonDark" />


            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>